<resources>
    <string name="app_name">cosasapp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_login">Continue…</string>
    <string name="create_room">Create new room 😋</string>
    <string name="joinroom">Join a room 😋</string>
    <string name="quiz_history">View game history 👴</string>
    <string name="logout">Logout 😞</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="search_here">Search here…</string>
    <string name="waiting_for_players">Waiting for players</string>
    <string name="choose_room">Choose your room</string>
    <string name="results">Results</string>
    <string name="you_lost">You lost! 😭</string>
    <string name="you_won">You won! 😍🔝👌</string>
    <string name="top">Leaderboards 🏅</string>
    <string name="flash_challenge">Flash challenge ⚡</string>
    <string name="gamehistory">Games history</string>
    <string name="emoji_lost">😢</string>
    <string name="emoji_won">😀</string>
</resources>
